src/client/test.css
body{
	color: cornsilk;
	font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}
h1{
	font-size: 100%;
	background-color: black;
	color: white;
}
p{
	border: 2px solid powderblue;
}

.nav-container{
	display:grid;
	grid-template-columns: 30% auto;
	grid-template-rows: auto;

	position:fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;

	background-color: black;
}
.nav-content{
	border: none;
	position: relative;
}
.nav-sidebar{
	background-color: #383838;
	position: relative;
}
.nav-sidebar-active{
	background-color: #484848;
}
.nav-sidebar-item{
	max-height: 100px;

	padding-top: 20px;
	padding-left: 20px;
	padding-bottom: 20px;
}

.nav-sidebar-title{
	font-size: 200%;
	font-weight: bolder;
	color: #EEEEEE;
}
.nav-sidebar-body{
	font-size: 150%;
	color: #CCCCCC;
}

.button-floating{
	position: absolute;
	margin: 20px;
	background-color: transparent;
	border: none;
	cursor: pointer;
}

